--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -1,18 +1,28 @@
 <RCC>
     <qresource prefix="/style/common">
-        <file>Dialogs.css</file>
-        <file>General.css</file>
-        <file>BaseTrack.css</file>
-        <file>LocalTrack.css</file>
-        <file>Chat.css</file>
-        <file>NinjamWindow.css</file>
-        <file>MainWindow.css</file>
-        <file>Chords.css</file>
-        <file>PublicRooms.css</file>
+        <file>css/common/Dialogs.css</file>
+        <file>css/common/General.css</file>
+        <file>css/common/BaseTrack.css</file>
+        <file>css/common/LocalTrack.css</file>
+        <file>css/common/Chat.css</file>
+        <file>css/common/NinjamWindow.css</file>
+        <file>css/common/MainWindow.css</file>
+        <file>css/common/Chords.css</file>
+        <file>css/common/PublicRooms.css</file>
     </qresource>
-    <qresource prefix="/style/themes">
-        <file>Flat.css</file>
-        <file>Rounded.css</file>
+    <qresource prefix="/style/themes/Flat">
+        <file>css/themes/Flat/BaseTrack.css</file>
+        <file>css/themes/Flat/NinjamWindow.css</file>
+        <file>css/themes/Flat/LocalTrack.css</file>
+        <file>css/themes/Flat/Dialogs.css</file>
+        <file>css/themes/Flat/General.css</file>
+        <file>css/themes/Flat/MainWindow.css</file>
+        <file>css/themes/Flat/PublicRooms.css</file>
+        <file>css/themes/Flat/Chat.css</file>
+        <file>css/themes/Flat/Chords.css</file>
+    </qresource>
+    <qresource prefix="/style/themes/Rounded">
+        <file>css/themes/Rounded/Rounded.css</file>
     </qresource>
     <qresource prefix="/tr">
         <file alias="en.qm">../../translations/en.qm</file>
