Loading css files from selected theme
 - Now the theme is splited in small css files. The common css code is in css/common and themes are in css/themes.

 - Using a Theme::Loader class to load the theme css files, including the common files. The content of the files is merged in a big CSS string.

--- a/src/resources/css/themes/Flat/BaseTrack.css
+++ b/src/resources/css/themes/Flat/BaseTrack.css
@@ -61,8 +61,8 @@ BaseTrackView
         stop:0 rgb(240, 240, 240),
         stop:1 rgb(160, 160, 160));
 
-    border: 1px solid rgb(61, 61, 61);
-    font-size: 8px; /*db value */
+    border: none; /*1px solid rgb(61, 61, 61);*/
+    font-size: 8px;
 }
 
 BaseTrackView[unlighted="true"],
@@ -115,7 +115,7 @@ BaseTrackView[unlighted="true"] #muteButton
 
 
 
-/* +++++++++++++++++++++++++++++++++++++++++++ */
+
 PeakMeter{
     background-color: rgba(0, 0, 0, 6);
     border: none;
@@ -153,3 +153,4 @@ TrackGroupView[unlighted="true"] #groupNameField
     background: rgba(255, 255, 255, 20);
     border: none;
 }
+
