--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -1,25 +1,25 @@
 <RCC>
     <qresource prefix="/style/common">
-        <file>css/common/Dialogs.css</file>
-        <file>css/common/General.css</file>
-        <file>css/common/BaseTrack.css</file>
-        <file>css/common/LocalTrack.css</file>
-        <file>css/common/Chat.css</file>
-        <file>css/common/NinjamWindow.css</file>
-        <file>css/common/MainWindow.css</file>
-        <file>css/common/Chords.css</file>
-        <file>css/common/PublicRooms.css</file>
+        <file alias="General.css">css/common/General.css</file>
+        <file alias="Dialogs.css">css/common/Dialogs.css</file>
+        <file alias="BaseTrack.css">css/common/BaseTrack.css</file>
+        <file alias="LocalTrack.css">css/common/LocalTrack.css</file>
+        <file alias="Chat.css">css/common/Chat.css</file>
+        <file alias="NinjamWindow.css">css/common/NinjamWindow.css</file>
+        <file alias="MainWindow.css">css/common/MainWindow.css</file>
+        <file alias="Chords.css">css/common/Chords.css</file>
+        <file alias="PublicRooms.css">css/common/PublicRooms.css</file>
     </qresource>
     <qresource prefix="/style/themes/Flat">
-        <file>css/themes/Flat/BaseTrack.css</file>
-        <file>css/themes/Flat/NinjamWindow.css</file>
-        <file>css/themes/Flat/LocalTrack.css</file>
-        <file>css/themes/Flat/Dialogs.css</file>
-        <file>css/themes/Flat/General.css</file>
-        <file>css/themes/Flat/MainWindow.css</file>
-        <file>css/themes/Flat/PublicRooms.css</file>
-        <file>css/themes/Flat/Chat.css</file>
-        <file>css/themes/Flat/Chords.css</file>
+        <file alias="BaseTrack.css">css/themes/Flat/BaseTrack.css</file>
+        <file alias="NinjamWindow.css">css/themes/Flat/NinjamWindow.css</file>
+        <file alias="LocalTrack.css">css/themes/Flat/LocalTrack.css</file>
+        <file alias="Dialogs.css">css/themes/Flat/Dialogs.css</file>
+        <file alias="General.css">css/themes/Flat/General.css</file>
+        <file alias="MainWindow.css">css/themes/Flat/MainWindow.css</file>
+        <file alias="PublicRooms.css">css/themes/Flat/PublicRooms.css</file>
+        <file alias="Chat.css">css/themes/Flat/Chat.css</file>
+        <file alias="Chords.css">css/themes/Flat/Chords.css</file>
     </qresource>
     <qresource prefix="/style/themes/Rounded">
         <file>css/themes/Rounded/BaseTrack.css</file>
