--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -22,15 +22,15 @@
         <file alias="Chords.css">css/themes/Flat/Chords.css</file>
     </qresource>
     <qresource prefix="/style/themes/Rounded">
-        <file>css/themes/Rounded/BaseTrack.css</file>
-        <file>css/themes/Rounded/Chat.css</file>
-        <file>css/themes/Rounded/Chords.css</file>
-        <file>css/themes/Rounded/Dialogs.css</file>
-        <file>css/themes/Rounded/General.css</file>
-        <file>css/themes/Rounded/LocalTrack.css</file>
-        <file>css/themes/Rounded/MainWindow.css</file>
-        <file>css/themes/Rounded/NinjamWindow.css</file>
-        <file>css/themes/Rounded/PublicRooms.css</file>
+        <file alias="BaseTrack.css">css/themes/Rounded/BaseTrack.css</file>
+        <file alias="Chat.css">css/themes/Rounded/Chat.css</file>
+        <file alias="Chords.css">css/themes/Rounded/Chords.css</file>
+        <file alias="Dialogs.css">css/themes/Rounded/Dialogs.css</file>
+        <file alias="General.css">css/themes/Rounded/General.css</file>
+        <file alias="LocalTrack.css">css/themes/Rounded/LocalTrack.css</file>
+        <file alias="MainWindow.css">css/themes/Rounded/MainWindow.css</file>
+        <file alias="NinjamWindow.css">css/themes/Rounded/NinjamWindow.css</file>
+        <file alias="PublicRooms.css">css/themes/Rounded/PublicRooms.css</file>
     </qresource>
     <qresource prefix="/tr">
         <file alias="en.qm">../../translations/en.qm</file>
